@@ -1,0 +1,219 @@
+body {
+    font: 14px Helvetica,arial,freesans,clean,sans-serif;
+    line-height:1.6;
+    width: 920px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+pre, code, tt {
+    font-size: 12px;
+    font-family: Consolas,"Liberation Mono",Courier,monospace;
+}
+input,button,textarea {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    font-family:inherit;
+}
+blockquote,q {
+    quotes:none;
+}
+blockquote:before,blockquote:after,q:before,q:after {
+    content:'';
+    content:none;
+}
+table {
+    border-collapse:collapse;
+    border-spacing:0;
+    font-size:100%;
+    font:inherit;
+}
+article,aside,header,footer,nav,section,figure,figcaption,hgroup,progress,canvas {
+    display:block;
+}
+strong,b {
+    font-weight:bold;
+}
+em,i {
+    font-style:italic;
+}
+>*:first-child {
+    margin-top:0!important;
+}
+>*:last-child {
+    margin-bottom:0!important;
+}
+a.absent {
+    color:#c00;
+}
+a.anchor {
+    display:block;
+    padding-left:30px;
+    margin-left:-30px;
+    cursor:pointer;
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+}
+h1,h2,h3,h4,h5,h6 {
+    margin:20px 0 10px;
+    padding:0;
+    font-weight:bold;
+    -webkit-font-smoothing:antialiased;
+    cursor:text;
+    position:relative;
+}
+h1:hover a.anchor,h2:hover a.anchor,h3:hover a.anchor,h4:hover a.anchor,h5:hover a.anchor,h6:hover a.anchor {
+    text-decoration:none;
+    line-height:1;
+    padding-left:0;
+    margin-left:-22px;
+    top:15%;
+}
+h1 tt,h1 code,h2 tt,h2 code,h3 tt,h3 code,h4 tt,h4 code,h5 tt,h5 code,h6 tt,h6 code {
+    font-size:inherit;
+}
+h1 {
+    font-size:28px;
+    border-bottom:1px solid #ccc;
+    color:#000;
+}
+h2 {
+    font-size:24px;
+    border-bottom:1px solid #ccc;
+    color:#000;
+}
+h3 {
+    font-size:18px;
+}
+h4 {
+    font-size:16px;
+}
+h5 {
+    font-size:14px;
+}
+h6 {
+    color:#777;
+    font-size:14px;
+}
+p,blockquote,ul,ol,dl,table,pre {
+    margin:15px 0;
+}
+hr {
+    background:transparent url("dirty-shade.png") repeat-x 0 0;
+    border:0 none;
+    color:#ccc;
+    height:4px;
+    padding:0;
+}
+>h2:first-child,>h1:first-child,>h1:first-child+h2,>h3:first-child,>h4:first-child,>h5:first-child,>h6:first-child {
+    margin-top:0;
+    padding-top:0;
+}
+a:first-child h1,a:first-child h2,a:first-child h3,a:first-child h4,a:first-child h5,a:first-child h6 {
+    margin-top:0;
+    padding-top:0;
+}
+h1+p,h2+p,h3+p,h4+p,h5+p,h6+p {
+    margin-top:0;
+}
+li p.first {
+    display:inline-block;
+}
+ul,ol {
+    padding-left:30px;
+}
+ul.no-list,ol.no-list {
+    list-style-type:none;
+    padding:0;
+}
+ul li>:first-child,ol li>:first-child {
+    margin-top:0;
+}
+dl {
+    padding:0;
+}
+dl dt {
+    font-size:14px;
+    font-weight:bold;
+    font-style:italic;
+    padding:0;
+    margin:15px 0 5px;
+}
+dl dt:first-child {
+    padding:0;
+}
+dl dt>:first-child {
+    margin-top:0;
+}
+dl dt>:last-child {
+    margin-bottom:0;
+}
+dl dd {
+    margin:0 0 15px;
+    padding:0 15px;
+}
+dl dd>:first-child {
+    margin-top:0;
+}
+dl dd>:last-child {
+    margin-bottom:0;
+}
+blockquote {
+    border-left:4px solid #DDD;
+    padding:0 15px;
+    color:#777;
+}
+blockquote>:first-child {
+    margin-top:0;
+}
+blockquote>:last-child {
+    margin-bottom:0;
+}
+table th {
+    font-weight:bold;
+}
+table th,table td {
+    border:1px solid #ccc;
+    padding:6px 13px;
+}
+table tr {
+    border-top:1px solid #ccc;
+    background-color:#fff;
+}
+table tr:nth-child(2n) {
+    background-color:#f8f8f8;
+}
+img {
+    max-width:100%;
+}
+code,tt {
+    margin:0 2px;
+    padding:0 5px;
+    white-space:nowrap;
+    border:1px solid #eaeaea;
+    background-color:#f8f8f8;
+    border-radius:3px;
+}
+pre>code {
+    margin:0;
+    padding:0;
+    white-space:pre;
+    border:none;
+    background:transparent;
+}
+pre {
+    background-color:#f8f8f8;
+    border:1px solid #ccc;
+    font-size:13px;
+    line-height:19px;
+    overflow:auto;
+    padding:6px 10px;
+    border-radius:3px;
+}
+pre code,pre tt {
+    background-color:transparent;
+    border:none;
+}
+
